# cellarium

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  LICENSE  POST_HACKATHON_AUDIT.md  POST_HACKATHON_TODO.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
apps/: cellarium_ui.py  hypotheses.py  server.py  sessions.py
apps/web/: app.js  index.html  style.css
data/: sessions.seed.db
data/cache/: bnumber_map.json  gene_scope.json  glc_to_acetate_shift_degenerate.json  wt_basal_seeds.json
data/hf/: README.md  UPLOAD_LEDGER.md
data/manifest/: fmenol-1783595764-8b4249.parquet  fmenol-1783595764-8b4249.parquet.summary.json  fmenol-1783701178-644745.parquet  fmenol-1783764005-489db7.parquet  fmenol-1783779246-43f165.parquet  vmnik-1783556216-ca4a94.parquet  vmnik-1783563829-7d7cea.parquet  vmnik-1783593437-46c4ae.parquet  vmnik-1783597965-b9f599.parquet  vmnik-1783613325-6a027b.parquet  vmnik-1783623224-b72276.parquet  vmnik-1783637675-aef292.parquet  vmnik-1783644766-ad3757.parquet  vmnik-1783716427-1b9b6f.parquet  vmnik-1783759080-a9cb0e.parquet  vmnik-1783759662-a91f83.parquet  vmnik-1783760576-16b095.parquet  vmnik-1783790954-c90794.parquet  vmnik-1783790965-87041a.parquet  vmnik-relabel2.parquet
data/manifest_archive_demo/: fmenol-1783594712-eae88d.parquet  fmenol-1783594733-5901ca.parquet  fmenol-1783594739-42c571.parquet
docs/: AUDIT.md  CASE_MATRIX.md  CORPUS_OBSERVATIONS.md  COUNCIL_IMPROVEMENT_LEDGER.md  COUNCIL_VS_KDENSE.md  DECISIONS.md  DEMO.md  DOCKER_SETUP.md  GENERATE.md  HYPOTHESIS_MODE_PLAN.md  PUB_A1_REPLICATION.md  ROADMAP.md  SOCRATIC_COUNCIL.md  SOCRATIC_COUNCIL_EVAL_REPORT.md  council_issues.yaml  parallel_test_report.html
docs/report/: index.html
evals/: EVAL_SPEC.md  README.md  ablate.py  aggregate.py  aggregate_ab.py  audit.py  cases.py  debate.py  grade.py  human_packet.py  loop_live.py  run_ab.py  temperature_sweep.py
evals/preregister/: PREREGISTRATION.md
evals/results/: .gitignore  ablation.json  ablation_summary.json  audited.json  corpus_snapshot.json  debate.json  full_run.json  probe.json  probe2.json  probe6.json  quarantine.json  quarantine_audited.json  run_2x.json
paper/: references.bib  socratic_council.md  socratic_council.tex
paper/figures/: make_figures.py
paper/human_eval/: PROTOCOL.md  key.csv  packet.html  pilot_results.json  scoresheet_template.csv
scripts/: ab_score.py  docker_smoke.py  hf_pack_upload.py  hf_upload.py  record_demo_sessions.py  sanitize_manifest_paths.py
skills/cellarium/: ATTRIBUTION.md
src/cellarium/: __init__.py  _reader_agg.py  _reader_worker.py  agent.py  audit.py  biosecurity.py  cli.py  council.py  design_generator.py  differential.py  doe.py  envelope.py  fba.py  generate.py  harness.py  hf.py  hypothesis.py  instrument.py  launch.py  manifest.py  model.py  observability.py  orchestrate.py  pathway_panel.py  provenance.py  qc.py  raw.py  reader.py  receptive_field.py  resources.py  rigor.py  robustness.py  runner.py  scan.py  sci2.py  scope.py  simout.py  skills.py  stats.py  store.py  (+6 more)
tests/: test_agent.py  test_aggregate_ab.py  test_analysis_tools.py  test_audit.py  test_blindness.py  test_compaction.py  test_council.py  test_design_generator.py  test_doe.py  test_fba.py  test_frontend_safety.py  test_guardrails.py  test_harness.py  test_hf.py  test_hypotheses.py  test_launch.py  test_narrowing.py  test_observability.py  test_orchestrate.py  test_provenance.py  test_raw.py  test_reader_agg.py  test_receptive_field.py  test_receptive_field_bench.py  test_resources.py  test_robustness.py  test_routing.py  test_scan.py  test_sci2.py  test_scope_guards.py  test_skills.py  test_spa_smoke.py  test_stats.py  test_surrogate.py  test_temperature_sweep.py  test_ui.py
tests/parallel/: README.md  real_run.py  test_parallel.py
ui/: index.html
(+18 files in other folders)
