[project]
name = "cellarium"
version = "0.1.0"
description = "A Claude-backed copilot for grounded reasoning over a whole-cell E. coli simulation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Evangelos-Marios Nikolados" }]
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "duckdb>=1.0",
    "pyarrow>=15",
    "starlette>=0.37",     # the web glass-box (apps/server.py); SQLite session store uses stdlib sqlite3
    "uvicorn>=0.29",
]

[project.optional-dependencies]
hf = ["huggingface_hub>=0.24"]   # only for the corpus upload scripts (scripts/hf_*.py)

[project.scripts]
cellarium = "cellarium.cli:main"
cellarium-generate = "cellarium.generate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cellarium"]
