[project]
name = "cellarium"
version = "0.1.0"
description = "A Claude-backed copilot for grounded reasoning over a whole-cell E. coli simulation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Evangelos-Marios Nikolados" }]
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "duckdb>=1.0",
    "pyarrow>=15",
    "starlette>=0.37",     # the web glass-box (apps/server.py); SQLite session store uses stdlib sqlite3
    "uvicorn>=0.29",
]

[project.optional-dependencies]
hf = ["huggingface_hub>=0.24"]   # only for the corpus upload scripts (scripts/hf_*.py)
fba = ["cobra>=0.29"]            # SCI-1: the independent genome-scale FBA cross-check over iML1515 (opt-in; pulls scipy/pandas/optlang + a solver). Keeps the core scipy-free.
rnaseq = ["pydeseq2>=0.4"]       # SCI-2: sim-vs-real RNA-seq (PRECISE-1K) concordance (opt-in; pulls scipy/pandas/anndata). DESeq2 runs on the DATA side only.
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
cellarium = "cellarium.cli:main"
cellarium-generate = "cellarium.generate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cellarium"]

[tool.ruff]
line-length = 120
extend-exclude = ["skills"]   # vendored third-party skills — not ours to lint

[tool.ruff.lint]
# The codebase deliberately uses compact one-liners (semicolons) and long single-line tool-description strings,
# so line-length + multi-statement style rules are off; keep the real-bug rules (pyflakes F + core pycodestyle E/W).
select = ["E", "F", "W"]
ignore = ["E501", "E702", "E401", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# tests/parallel needs Docker (opt-in via CELLARIUM_DOCKER_TESTS, skipped otherwise); the raw-simOut drill-down
# tests skip cleanly when no local raw is present (e.g. on CI).

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# Advisory only for now (CI runs it non-blocking); tightening typing is BACKLOG H-2.
